doc. get rid of float: annihilation.
	* doc/specs/dictionary.tex,
	* doc/specs/float.tex,
	* doc/specs/lang.tex,
	* doc/specs/lazy.tex,
	* doc/specs/list.tex,
	* doc/specs/pair.tex,
	* doc/tutorial/tutorial.tex: here.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -54,9 +54,9 @@ properly.
   Syntactic sugar for \lstinline|get(\var{key})|.
 \end{itemize}
 
-See \autoref{lst:specs:dictionary} for an example.
+Here is an example.
 
-\begin{urbiscript}[caption=Dictionaries, label=lst:specs:dictionary]
+\begin{urbiscript}
 var d = Dictionary.new("one", 1, "two", 2);
 [00000001] Dictionary {"one" => 1, "two" => 2}
 /*(*/
