--- a/doc/specs/pair.tex
+++ b/doc/specs/pair.tex
@@ -34,9 +34,9 @@ A \dfn{pair} is a container storing two objects, similar in spirit to
   contents (equality-wise).
 \end{itemize}
 
-See \autoref{lst:specs:pair} for an example.
+See below for an example.
 
-\begin{urbiscript}[caption=Pairs, label=lst:specs:pair]
+\begin{urbiscript}
 var p = Pair.new(1, 2);
 [00000001] (1, 2)
 p.first - p.second;
