--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -33,9 +33,9 @@ Its main features are:
 \end{itemize}
 
 This documentation is far from complete.  It is updated regularly on
-the Gostai Web site, in \url{\docurl}, both as a PDF document,
-\href{\docurl/urbi-sdk.pdf}{urbi-sdk.pdf}, and as HTML pages,
-\href{\docurl/urbi-sdk.html}{urbi-sdk.html}.
+the Gostai Web site, in \href{\docurl}{\docurl}, both as a PDF
+document, \href{\docurl/urbi-sdk.pdf}{urbi-sdk.pdf}, and as HTML
+pages, \href{\docurl/urbi-sdk.html}{urbi-sdk.html}.
 
 
 %% \paragraph{Thanks}
